--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "framer-motion": "^11.0.6",
     "material-ui-popup-state": "^5.0.10",
     "moment": "^2.30.1",
+    "next-cloudinary": "^6.11.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -64,6 +65,7 @@
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.12.4",
     "swr": "^2.2.5",
+    "tailwindcss": "^3.4.10",
     "vite": "^5.2.10",
     "vite-jsconfig-paths": "^2.0.1",
     "web-vitals": "^3.5.2",
@@ -109,7 +111,6 @@
     "postcss": "^8.4.41",
     "prettier": "^3.2.5",
     "react-error-overlay": "6.0.11",
-    "sass": "^1.71.1",
-    "tailwindcss": "^3.4.10"
+    "sass": "^1.71.1"
   }
 }
